--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "chart.js": "^4.4.7",
     "framer-motion": "^11.13.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
@@ -42,7 +44,7 @@
     "slate-react": "^0.112.1",
     "slick-carousel": "^1.8.1",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.15.3",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4"
   },
   "devDependencies": {
