--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.3",
     "react-stars": "^2.2.5",
+    "react-youtube": "^10.1.0",
     "slate": "^0.112.0",
     "slate-history": "^0.110.3",
     "slate-hyperscript": "^0.100.0",
